# pure-ai-tutorials

./: README.md
DecodingAIDecisions-CNN-LIME/: xai_cnn_lime.ipynb
FromPixelsToPatterns-CNN-PyTorch/: cnn_in_pytorch.ipynb
GenerativeAdversarialNetwork-PyTorch/: README.md  pyproject.toml  pytorch-gan.ipynb
MasteringHyperparameterOptimization/: bayesian_hyperparameter_optimization.ipynb
RecommenderSystem-PyTorch/: README.md  pyproject.toml  pytorch-recommender.ipynb
RecommenderSystem-PyTorch/ml-latest-small/: ratings.csvZone.Identifier
SimpleTransformer-PyTorch/: README.md  dataset.py  model.py  pyproject.toml  train.py
