[tool.poetry]
name = "pytorch-gan"
version = "0.1.0"
description = "A GAN built with PyTorch"
authors = ["Evan Mattson"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.1.2"
numpy = "^1.26.2"
pandas = "^2.1.4"
scikit-learn = "^1.3.2"
matplotlib = "^3.8.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.27.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"